[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymimir-rl"
version = "0.1.7"
description = "Reinforcement Learning (RL) package for Mimir."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
  { name = "Simon Stahlberg", email = "simon.stahlberg@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "torch>=2.6.0",
  "pymimir>=0.13.42",
  "networkx>=3.5"
]

[project.urls]
Homepage = "https://github.com/simon-stahlberg/mimir-rl"

[project.optional-dependencies]
dev = [
  "pymimir-rgnn>=0.1.2",
  "pytest>=6.0",
  "build",
  "twine"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -p no:warnings"
filterwarnings = [
    "ignore::UserWarning:torch.*",
    "ignore::UserWarning"
]
testpaths = ["tests"]
